spring-domain-directory/src/main/java/com/example/demo/global/error/ErrorExceptionHandler.java
package com.example.demo.global.error;

public class ErrorExceptionHandler {
}
